list html page update

--- a/html_boilerplate/index.html
+++ b/html_boilerplate/index.html
@@ -13,6 +13,17 @@
     <h6>This is the smallest in size compaired to all the other headings</h6>
     <strong>This sentence will be bold</strong>
     <em>This will make the text lean forward aka italic</em>
+    <p>We will create a ordered and unordered list below:</p>
+    <ul>
+        <li>List 1</li>
+        <li>List 2</li>
+        <li>List 3</li>
+    </ul>
+    <ol>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>fuckItAll</li>
+    </ol>
     <!--This will be the way to comment in HTML how fun is that!!-->
     
  </body>   
