--- a/html_boilerplate/list.html
+++ b/html_boilerplate/list.html
@@ -13,11 +13,39 @@ An ordered list of your all time top 5 favorite video games or movies -->
     </head>
     <body>
         <ul>
+            <h5>Favirote Food</h5>
             <!-- Unordered shopping list of my favorite food -->
             <li>Brocauli</li>
             <li>Carrot</li>
             <li>Tittes</li>
             <li>Stuffed Mushroom</li>
         </ul>
+        <ol>
+            <!-- ordered to to list -->
+            <p>My to do list</p>
+            <h5>To-do list</h5>
+            <li>Clean the bedroom</li>
+            <li>Read the book in bed</li>
+            <li>Remove the clothes</li>
+            <li>Fuck that sweet pussy</li>
+        </ol>
+        <ul>
+            <!-- unordered list of places I would like to visit someday -->
+            <p>Places I would like to visit someday</p>
+            <li>New York</li>
+            <li>All 7 continent</li>
+            <li>Rome</li>
+            <li>Home</li>
+        </ul>
+        <ol>
+            <!-- ordered list of your all time top 5 favorite video games or movies -->
+            <p>It has to movies since I do not play games</p>
+            <li>Movie one</li>
+            <li> Blah Blah Blah</li>
+            <li>Domination is the way forward</li>
+            <li>I will take what is mine!</li>
+            <li>Success is the only option</li>
+            <li>If you are not with me, you are against me</li>
+        </ol>
     </body>
 </html>
