--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -5,6 +5,8 @@
     <title>Images and Links</title>
     </head>
     <body>
-        
+        <h1>Homepage</h1>
+        <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
+
     </body>
 </html>
